...
                    ),
                    SizedBox(width: 16),
                    Column(
                      crossAxisAlignment: CrossAxisAlignment.start,
                      children: [
                        Text(
                          'Mama Fadel DIAWARA',
                          style: TextStyle(
                            fontSize: 18,
                            fontWeight: FontWeight.bold,
                          ),
                        ),
                        SizedBox(height: 4),
...
            label: 'Select application language',
            child: Card(
              child: ListTile(
                leading: const Icon(Icons.language),
                title: Text(l10n.language),
                subtitle: Text(
                  settings.locale.languageCode == 'fr' ? 'Français' : 'English',
                ),
                trailing: Switch(
                  value: settings.locale.languageCode == 'en',
                  onChanged: (_) {
                    settings.toggleLanguage();
                  },
...
